apps/tabiji/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tabiji
  namespace: tabiji
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
  hostnames:
    - tabiji.froystein.jp
  rules:
    - backendRefs:
        - name: tabiji
          port: 80
